# llm

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: simple_tokenizer_v1.py
src/llm/: __init__.py  causal_attention.py  configuration.py  deep_neural_network.py  dummy_gpt_model.py  feed_forward.py  gaussian_error_linear_unit.py  generative_pretrained_transformer.py  gpt_dataset_v1.py  layer_norm.py  multi_head_attention.py  multi_head_attention_wrapper.py  self_attention_v1.py  self_attention_v2.py  simple_tokenizer_v1.py  simple_tokenizer_v2.py  transformer_block.py
src/tests/: test_ch2.py  test_ch3.py  test_ch4.py
