[project]
name = "llm"
version = "0.0.0"
description = "Following along with Build a Large Language Model by Sebastian Raschka"
authors = [
  { name = "Carlos Macasaet" }
]
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "matplotlib>=3.10.6",
    "more-itertools>=10.7.0",
    "numpy>=2.3.1",
    "tiktoken>=0.9.0",
    "torch>=2.7.1",
]

[project.urls]
documentation = "https://github.com/rasbt/LLMs-from-scratch"

[dependency-groups]
dev = [
    "mutpy>=0.6.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.12.3",
]

[project.scripts]
llm = "llm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
llm = { workspace = true }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
