[project]
name = "llm"
version = "0.0.0"
description = "Following along with Build a Large Language Model by Sebastian Raschka"
authors = [
  { name = "Carlos Macasaet" }
]
readme = "README.md"
requires-python = "~=3.11.15"
dependencies = [
    "jaxtyping~=0.3.11",
    "matplotlib~=3.10.6",
    "more-itertools~=10.8.0",
    "numpy~=2.4.6",
    "tiktoken~=0.12.0",
    "torch~=2.12.1",
]

[project.urls]
documentation = "https://github.com/rasbt/LLMs-from-scratch"

[dependency-groups]
dev = [
    "beartype~=0.22.9",
    "mutpy~=0.6.1",
    "pytest~=9.1.1",
    "pytest-cov~=7.1.0",
    "pytest-xdist~=3.8.0",
    "ruff~=0.15.20",
]

[project.scripts]
llm = "llm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
llm = { workspace = true }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
ignore = ["F722"]
